# gstreamill

./: 752604.patch  AUTHORS  ChangeLog  Dockerfile  Makefile.am  README.CN.md  README.md  TODO  _config.yml  autogen.sh  configure.ac  gstreamill.service  gstreamill.spec.in  gstreamillinit.sh  index.html  libav.patch
_includes/: header.html
_posts/: 2014-05-31-用gstreamill实现批量转码
admin/: Makefile.am  capturelivejob.html  footer.html  gstreamill.html  header.html  index.html  joblist.html  jobmanage.html  jobs.html  jobstatus.html  mediaman.html  mediaupload.html  newencoderjob.html  newlivejob.html  newtranscodejob.html  setjob.html  setnetwork.html  system.html
admin/css/: gstreamill.css
admin/jobschemas/: encoder.conf  encoder.schema  m3u8.conf  networksrc.conf  networksrc.schema  testsrc  testsrc.conf  testsrc.schema  v4l2src.conf  v4l2src.schema
admin/jobtemplates/: encoder  encoder.conf  m3u8  multibitrate_1  networksrc  source_v4l2src  source_v4l2src.multibitrate_1.udp_no.m3u8_yes  testsrc.conf  v4l2src  v4l2src.conf  v4l2src.schema  v4l2src_multibitrate_1_udp_n_m3u8_y.job
admin/js/: bootbox.js  gstreamill.js
admin/locales/en/: translation.json
admin/locales/zh/: translation.json
admin/locales/zh_CN/: translation.json
admin/schemas/: encoder.conf  encoder_mp4.schema  encoder_zh_CN.conf  gstreamill.schema  gstreamillconf.schema  gstreamillconf_en.schema  gstreamillconf_zh_CN.schema  gstreamilloverview.schema  gstreamilloverview_zh_CN.schema  jobstat.schema  jobstat_en.schema  jobstat_zh_CN.schema  live_encoder_hdtv.json  live_encoder_phone.json  live_encoder_sdtv.json  live_source_network.json  live_source_test.json  live_source_v4l2.json  networkinterfaces.schema  networkinterfaces_en.schema  networkinterfaces_zh_CN.schema  networksrc.conf  networksrc.json  networksrc.schema  networksrc_en.conf  networksrc_zh_CN.conf  newlivejob_en.schema  newlivejob_zh_CN.schema  newtranscodejob.schema  newtranscodejob_en.schema  newtranscodejob_zh_CN.schema  system.schema  system_zh_CN.schema  testsrc.conf  testsrc.schema  testsrc_en.conf  testsrc_zh_CN.conf  transcode_encoder_hdtv_mp4.json  transcode_encoder_mp4.schema  transcode_encoder_pad_mp4.json  (+12 more)
docs/: Makefile  conf.py  develop.rst  documents.rst  install.rst  introduction.rst  jobs.rst  managment.rst  usage.rst
docs/_static/: arch.ppt
docs/_templates/: index.html
docs/_themes/sphinx13/: layout.html
etc/: Makefile.am  gstreamill.conf
etc/init/: gstreamill.conf  gstreamill.conf.in
examples/: 4k.265.job  XI006AEPRO.CARD.job  aac.only.job  audio.only.job  cctv.flv.audio.only.job  cctv.flv.job  copy.264.trans.aac.job  decodebin.job  easycap.job  hlssrc.job  ip.job  mp2.aac.tssegment.job  mpeg2_1080p_ac3.job  multiaudio.job  rtmp.job  rtmpsrc.job  rtspsrc.audio.trans.video.copy.job  rtspsrc.job  subtitle.job  subtitleoverlay.job  test.job  transcoder.264.aac.job  transcoder.264.aac.output.m3u8.job  transcoder.264.aac.output.ts.job  transcoder.cbr.job  transcoder.job  transcoder.mxf.job  transcoder.qt.video.prores.job  tssegment.job  v4l2.job  x265.job
src/: Makefile.am  encoder.c  encoder.h  encoders.h  gstreamill  gstreamill.c  gstreamill.h  httpmgmt.c  httpmgmt.h  httpserver.c  httpserver.h  httpstreaming.c  httpstreaming.h  job.c  job.h  jobdesc.c  jobdesc.h  livejob.c  livejob.h  livejobdesc.c  livejobdesc.h  log.c  log.h  m3u8playlist.c  m3u8playlist.h  main.c  mediaman.c  mediaman.h  source.c  source.h  transcodejob.c  transcodejob.h  tssegment.c  tssegment.h  utils.c  utils.h
test/: httpclient.py  httpload.py  httpmgmt.py  m3u8client.py
tools/: cleangstmill.sh  hd2.5M.temp  hd2.5Mjobs.txt  hd4M.temp  hd4Mjobs.txt  hd8M.temp  hd8Mjobs.txt  postjob.py  postlivejobs.py  preload.py  sd.temp  sdjobs.txt  segment.temp  segmentjobs.txt  startjobs.sh  stoplivejobs.py  template.job
usr/: Makefile.am
usr/lib/systemd/system/: gstreamill.service  gstreamill.service.in
usr/local/share/gstreamill/admin/: newlivejob.html
usr/local/share/gstreamill/admin/schemas/: transcode_encoder_hdtv_mp4.json  transcode_source_decodebin.json
usr/share/gstreamill/admin/: footer.html  newlivejob.html  newtranscodejob.html  setnetwork.html
usr/share/gstreamill/admin/locales/en/: translation.json
usr/share/gstreamill/admin/locales/zh_CN/: translation.json
usr/share/gstreamill/admin/schemas/: live_encoder_hdtv.json  live_encoder_phone.json  live_encoder_sdtv.json  transcode_encoder_hdtv_m3u8.json  transcode_encoder_hdtv_mp4.json  transcode_encoder_pad_m3u8.json  transcode_encoder_pad_mp4.json  transcode_encoder_phone_m3u8.json  transcode_encoder_phone_mp4.json  transcode_encoder_tv_m3u8.json  transcode_encoder_tv_mp4.json
