
admindir = $(datadir)/gstreamill/admin
admin_DATA = \
        index.html \
        header.html \
        footer.html \
        newlivejob.html \
        joblist.html \
        system.html \
        newtranscodejob.html \
        jobmanage.html

admincssdir = $(datadir)/gstreamill/admin/css
admincss_DATA = \
        css/bootstrap.css \
        css/bootstrap-theme.css \
        css/gstreamill.css

adminjsdir = $(datadir)/gstreamill/admin/js
adminjs_DATA = \
        js/bootstrap.js \
        js/jquery.js \
        js/i18next.js \
        js/gstreamill.js

adminfontsdir = $(datadir)/gstreamill/admin/fonts
adminfonts_DATA = \
        fonts/glyphicons-halflings-regular.eot \
        fonts/glyphicons-halflings-regular.svg \
        fonts/glyphicons-halflings-regular.ttf \
        fonts/glyphicons-halflings-regular.woff

adminimgdir = $(datadir)/gstreamill/admin/img
adminimg_DATA = \
        img/waiting.gif

adminschemasdir = $(datadir)/gstreamill/admin/schemas
adminschemas_DATA = \
        schemas/testsrc.json \
        schemas/v4l2src.json \
        schemas/networksrc.json \
        schemas/encoder.json \
        schemas/transcode_src_mpegps_mpeg2_mp123.json \
        schemas/transcode_src_mpegts_mpeg2_mp123.json \
        schemas/transcode_encoder_phone_mp4.json \
        schemas/transcode_encoder_pad_mp4.json \
        schemas/transcode_encoder_tv_mp4.json \
        schemas/transcode_encoder_hdtv_mp4.json

localesdir = $(datadir)/gstreamill/admin/locales/en
locales_DATA = \
        locales/en/translation.json

localeszh_CNdir = $(datadir)/gstreamill/admin/locales/zh_CN
localeszh_CN_DATA = \
        locales/zh_CN/translation.json
