
admindir = $(datadir)/gstreamill/admin
admin_DATA = \
        index.html \
        header.html \
        footer.html \
        newlivejob.html \
        joblist.html \
        system.html \
        newtranscodejob.html \
        jobmanage.html

admincssdir = $(datadir)/gstreamill/admin/css
admincss_DATA = \
        css/bootstrap.css \
        css/bootstrap-theme.css \
        css/gstreamill.css

adminjsdir = $(datadir)/gstreamill/admin/js
adminjs_DATA = \
        js/bootstrap.js \
        js/jquery.js \
        js/i18next.js \
        js/gstreamill.js

adminfontsdir = $(datadir)/gstreamill/admin/fonts
adminfonts_DATA = \
        fonts/glyphicons-halflings-regular.eot \
        fonts/glyphicons-halflings-regular.svg \
        fonts/glyphicons-halflings-regular.ttf \
        fonts/glyphicons-halflings-regular.woff

adminimgdir = $(datadir)/gstreamill/admin/img
adminimg_DATA = \
        img/waiting.gif

adminschemasdir = $(datadir)/gstreamill/admin/schemas
adminschemas_DATA = \
        schemas/live_source_test.json \
        schemas/live_source_v4l2.json \
        schemas/live_source_network.json \
        schemas/live_encoder_phone.json \
        schemas/live_encoder_sdtv.json \
        schemas/live_encoder_hdtv.json \
        schemas/transcode_source_decodebin.json \
        schemas/transcode_encoder_phone_mp4.json \
        schemas/transcode_encoder_pad_mp4.json \
        schemas/transcode_encoder_tv_mp4.json \
        schemas/transcode_encoder_hdtv_mp4.json

localesdir = $(datadir)/gstreamill/admin/locales/en
locales_DATA = \
        locales/en/translation.json

localeszh_CNdir = $(datadir)/gstreamill/admin/locales/zh_CN
localeszh_CN_DATA = \
        locales/zh_CN/translation.json
